# diffusion

./: .gitignore  pyproject.toml
src/lib/: get_device.py  make_grid.py  publish.py  show_images.py
src/pipelines/butterfly/: pipeline.py  publish.py  training.py
src/pipelines/butterfly/components/: dataset.py  model.py  scheduler.py
src/pipelines/point_navigation/: pipeline.py  publish.py  training.py  visualize.py
src/pipelines/point_navigation/components/: dataset.py  model.py
src/pipelines/point_navigation/docs/: guide.md
