[project]
name = "introdiffusers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.2",
    "diffusers>=0.36.0",
    "dotenv>=0.9.9",
    "ftfy>=6.3.1",
    "jaxtyping>=0.3.4",
    "matplotlib>=3.10.8",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]

[dependency-groups]
dev = ["mypy>=1.14"]

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
# Many ML libraries lack type stubs, so we ignore missing imports
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
